--- a/app/src/main/res/layout/card_content_add_view.xml
+++ b/app/src/main/res/layout/card_content_add_view.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +18,7 @@
             android:padding="10dp" />
 
         <LinearLayout
+            android:padding="10dp"
             android:id="@+id/input_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
