--- a/app/src/main/res/layout/card_content_add_view.xml
+++ b/app/src/main/res/layout/card_content_add_view.xml
@@ -21,7 +21,7 @@
             android:padding="10dp"
             android:id="@+id/input_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" />
 
         <Button
