--- a/app/src/main/res/layout/card_content_item_view.xml
+++ b/app/src/main/res/layout/card_content_item_view.xml
@@ -3,11 +3,10 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/success_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/cardview_light_background"
     app:cardCornerRadius="5dp"
     app:cardElevation="3dp">
 
