--- a/app/src/main/res/layout/flash_summary_view.xml
+++ b/app/src/main/res/layout/flash_summary_view.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical"
         android:padding="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/progress"
